--- a/app/src/main/res/layout/activity_detalle_anuncio.xml
+++ b/app/src/main/res/layout/activity_detalle_anuncio.xml
@@ -278,7 +278,7 @@
                     android:layout_height="wrap_content">
 
                     <!--Imagen de perfil del vendedor-->
-                    <com.google.android.material.imageview.ShapeableImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/ImgPerfil"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
