--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -31,7 +31,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_perfil"
                 android:src="@drawable/img_perfil"
                 android:scaleType="centerCrop"
@@ -42,6 +42,8 @@
                 android:id="@+id/FABCambiarImg"
                 android:layout_alignParentEnd="true"
                 app:fabSize="mini"
+                app:tint="@android:color/white"
+                android:backgroundTint="@color/mi_color_secundario"
                 android:src="@drawable/ic_selec_imagen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -80,13 +82,13 @@
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
 
-            <!--<ImageView
+            <ImageView
                 android:id="@+id/Iv_abrir_cal"
                 android:layout_gravity="center"
                 android:src="@drawable/calendario"
                 android:layout_marginEnd="7dp"
                 android:layout_width="40dp"
-                android:layout_height="40dp"/>-->
+                android:layout_height="40dp"/>
 
             <!--Fecha de nac-->
             <com.google.android.material.textfield.TextInputLayout
